Imported FBX doesn't show keyframes in Shape Key editor #63542

Closed
opened 2019-04-12 20:17:58 +02:00 by Robert Rioux · 8 comments

System Information
Operating system: MacBook Pro (Retina, 15-inch, Late 2013)
Graphics card: NVIDIA GeForce GT 750M 2 GB
Intel Iris Pro 1536 MB

Blender Version
Broken: 2.80, 700346d377, master, 2019-03-30

Short description of error

When I import an FBX file with shape keys, even if the animation works, they are not visible in the shapekey editor. Therefor, it's not possible to edit them nor to copy the action on another model with the same shape keys.

Attached are three files, the original FBX and a file with a model without animation (head) and one with (Head.001). I was trying to copy the shape keys from Head to Head.001. Also a screenshot of part of the interface showing an empty place where the keyframes should be.

It works in 2.79. So I can always do it in 2.79 as a workaround but it screws up my interface when I open it in 2.80.

Archive.zip

**System Information** Operating system: MacBook Pro (Retina, 15-inch, Late 2013) Graphics card: NVIDIA GeForce GT 750M 2 GB Intel Iris Pro 1536 MB **Blender Version** Broken: 2.80, 700346d377dd, master, 2019-03-30 **Short description of error** When I import an FBX file with shape keys, even if the animation works, they are not visible in the shapekey editor. Therefor, it's not possible to edit them nor to copy the action on another model with the same shape keys. Attached are three files, the original FBX and a file with a model without animation (head) and one with (Head.001). I was trying to copy the shape keys from Head to Head.001. Also a screenshot of part of the interface showing an empty place where the keyframes should be. It works in 2.79. So I can always do it in 2.79 as a workaround but it screws up my interface when I open it in 2.80. [Archive.zip](https://archive.blender.org/developer/F6936215/Archive.zip)
Author

Added subscriber: @Funnybob

Added subscriber: @Funnybob

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Bastien Montagne was assigned by Sebastian Parborg 2019-04-14 12:28:54 +02:00

The shapekeys show up in the dope sheet as something that is changing the value of the shapekeys. However non of the shapekeys have registered keyframes linked to them, so they keys doesn't show up in the shapekey editor.

The shapekeys show up in the dope sheet as something that is changing the value of the shapekeys. However non of the shapekeys have registered keyframes linked to them, so they keys doesn't show up in the shapekey editor.

This issue was referenced by b4909632b0

This issue was referenced by b4909632b05a5f84b23427f3aa170c76fec6e9d9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @FredSprinkle

Added subscriber: @FredSprinkle

I'm having this same issue in 2.82, did the fix not make it into 2.82?

I'm having this same issue in 2.82, did the fix not make it into 2.82?

You know what, this might actually be a setting issue in the program used to export the FBX. You have to choose "uniform keyframe reduction" on export, and then it works fine in Blender. I get all the keyframes!

You know what, this might actually be a setting issue in the program used to export the FBX. You have to choose "uniform keyframe reduction" on export, and then it works fine in Blender. I get all the keyframes!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63542
No description provided.